[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashdiffusion"
version = "0.0.1"
description = "FlashDiffusion: RoPE-DMAP and fast diffusion-map operators with attention kernels"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.5",
  "einops>=0.7",
]

[project.optional-dependencies]
examples = [
  "matplotlib>=3.7",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "jupyter>=1.0",
]

cuda = [
  "triton>=3.0",
  "flash-attn>=2.5",
]

jax = [
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
]

dev = [
  "pytest>=7.0",
  "ruff>=0.3.0",
  "black>=24.0",
]

all = [
  "matplotlib>=3.7",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "jupyter>=1.0",
  "triton>=3.0",
  "pytest>=7.0",
  "ruff>=0.3.0",
  "black>=24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
